--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: "TimeViper's Blog"
+description: "A blog covering security happenings, notes for certification courses, and helpful tips I've learned along the way"
